<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pdfLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:backgroundTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/pageNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.98" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageButton
        android:id="@+id/nextPageButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/nextpage"
        android:onClick="nextPage"
        android:rotation="180"
        android:scaleType="fitCenter"
        android:tint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageButton
        android:id="@+id/prevPageButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/prevpage"
        android:onClick="prevPage"
        android:rotation="0"
        android:scaleType="fitCenter"
        android:tint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageButton
        android:id="@+id/penButton"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginEnd="480dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/penDescription"
        android:onClick="selectPen"
        android:rotation="0"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pen" />

    <ImageButton
        android:id="@+id/highlighterButton"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginEnd="400dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/highlighterDescription"
        android:onClick="selectHighlighter"
        android:rotation="0"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/highlighter" />

    <ImageButton
        android:id="@+id/eraserButton"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginEnd="320dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/eraserDescription"
        android:onClick="selectEraser"
        android:rotation="0"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/eraser" />

    <ImageButton
        android:id="@+id/undoButton"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginEnd="80dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/undo"
        android:onClick="undo"
        android:rotation="0"
        android:scaleType="fitCenter"
        android:tint="#BEBEBE"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/undo" />

    <ImageButton
        android:id="@+id/redoButton"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/redo"
        android:onClick="redo"
        android:rotation="0"
        android:scaleType="fitCenter"
        android:tint="#BEBEBE"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/redo" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/back_to_last_activity"
        android:onClick="home"
        android:rotation="0"
        android:scaleType="fitCenter"
        android:tint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/home" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginEnd="240dp"
        android:adjustViewBounds="false"
        android:backgroundTint="#4CAF50"
        android:contentDescription="@string/reset_view"
        android:onClick="resetView"
        android:rotation="0"
        android:scaleType="centerCrop"
        android:text="@string/resetView"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/viewButton"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginEnd="560dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/switch_to_viewing"
        android:onClick="setView"
        android:rotation="0"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@android:drawable/ic_menu_view" />



</androidx.constraintlayout.widget.ConstraintLayout>